@@ -1,3 +1,7 @@
+2011-06-14  Eric Wasylishen  <ewasylishen@gmail.com>
+
+	* Source/NSImage.m: Tidy the -composite*/-dissolve* methods
+
 2011-06-13  Eric Wasylishen  <ewasylishen@gmail.com>
 
 	* Source/NSTextView.m (-scrollRangeToVisible:): Work with ranges
